--- a/templates/cart.html
+++ b/templates/cart.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 {% load static %}
 <html lang="en">
@@ -5,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'styles\cartstyle.css' %}">
+    
     <title>Document</title>
 </head>
 <body>
@@ -16,22 +18,31 @@
                         <div class="col"><h4><b>🛒Koszyk</b></h4></div>
                         <div class="col align-self-center text-right text-muted">Ilość :</div>
                     </div>
-                </div>  
-                {% for item in items %}
-                <div>
-                {% if item.book.imageURL %}
-                    <img src="{{ item.book.imageURL }}" alt="">
-                {% else %}
-                    <img src="{% static 'images/blank.png' %}" alt="">
-                {% endif %}
-            </div>
-                <div class="row">
-                    <h1>{{item.book.title}}</h1>
-                    <p>{{item.book.price|floatformat:2}}</p>
-                    <p>Łącznie {{item.get_total}}</p>
                 </div>
-                <p>Ilość:{{item.quantity}}</p>
-                {% endfor %}
+                {% if items %}  
+                    {% for item in items %}
+                        <div>
+                        {% if item.book.imageURL %}
+                            <img src="{{ item.book.imageURL }}" alt="">
+                        {% else %}
+                            <img src="{% static 'images/blank.png' %}" alt="">
+                        {% endif %}
+                    </div>
+                        <div class="row">
+                            <h1>{{item.book.title}}</h1>
+                            <p>{{item.book.price|floatformat:2}}</p>
+                            <p>Łącznie {{item.get_total}}</p>
+
+                            <img data-book="{{item.book.id}}" data-action="add" class="addItem" src="{% static  'images/up.png' %}">
+
+                            <img data-book="{{item.book.id}}" data-action="remove" class="addItem" src="{% static  'images/down.png' %}">
+
+                        </div>
+                        <p>Ilość: {{item.quantity}}</p>
+                    {% endfor %}
+                {% else %}
+                    <div class="col align-self-center text-right text-muted"><h3>Brak przedmiotów w koszyku</h3></div>
+                {% endif %}
                 <div class="back-to-shop"><a href="{% url 'stuff:stuff_list' %}"><span class="text-muted">Powrót do sklepu</span></a></div>
             </div>
             <div class="col-md-4 summary">
@@ -51,4 +62,25 @@
         
     </div>
 </body>
+<script>
+    const user = "{{request.user}}"
+
+    function getCookie(name) {
+        let cookieValue = null;
+        if (document.cookie && document.cookie !== '') {
+            const cookies = document.cookie.split(';');
+            for (let i = 0; i < cookies.length; i++) {
+                const cookie = cookies[i].trim();
+                // Does this cookie string begin with the name we want?
+                if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                    break;
+                }
+            }
+        }
+        return cookieValue;
+    }
+    const csrftoken = getCookie('csrftoken');
+</script>
+<script type="text/javascript" src="{% static 'scripts/cart.js' %}"></script>
 </html>
