--- a/stuff/templates/stuff/checkout.html
+++ b/stuff/templates/stuff/checkout.html
@@ -1,5 +1,9 @@
+
 {% load static %}
+<link rel="stylesheet" href="{% static 'styles/checkout.css' %}">
 <!-- {% block checkout %} -->
+
+
 <div>
     <div>
         <div>
@@ -20,6 +24,66 @@
                 <h3>Łącznie {{order.get_cart_total|floatformat:2}} zł</h3>
             </div>
         </div>
+
+        <div class="row">
+            <div class="col-lg-6">
+                <div class="box-element" id="form-wrapper">
+                    <form id="form">
+                        <div id="user-info">
+                            <div class="form-field">
+                                <input required class="form-control" type="text" name="name" placeholder="Name..">
+                            </div>
+                            <div class="form-field">
+                                <input required class="form-control" type="email" name="email" placeholder="Email..">
+                            </div>
+                        </div>
+                        
+                        <div id="shipping-info">
+                            <hr>
+                            <p>Shipping Information:</p>
+                            <hr>
+                            <div class="form-field">
+                                <input class="form-control" type="text" name="address" placeholder="Address..">
+                            </div>
+                            <div class="form-field">
+                                <input class="form-control" type="text" name="city" placeholder="City..">
+                            </div>
+                            <div class="form-field">
+                                <input class="form-control" type="text" name="state" placeholder="State..">
+                            </div>
+                            <div class="form-field">
+                                <input class="form-control" type="text" name="zipcode" placeholder="Zip code..">
+                            </div>
+                            <div class="form-field">
+                                <input class="form-control" type="text" name="country" placeholder="Zip code..">
+                            </div>
+                        </div>
+    
+                        <hr>
+                        <input id="form-button" class="btn btn-success btn-block" type="submit" value="Continue">
+                    </form>
+                </div>
+    
+                <br>
+                <div class="box-element hidden" id="payment-info" hidden>
+                    <small>Paypal Options</small>
+                    <!--<button id="make-payment">Make payment</button>-->
+                    <div id="paypal-button-container"></div>
+                </div>
+                
+            </div>
     </div>
 </div>
 <!-- {% endblock checkout %} -->
+
+<script type="text/javascript">
+    var shipping = '{{order.shipping}}'
+
+    var form = document.getElementById('form')
+    form.addEventListener('submit', (e) => {
+        e.preventDefault()
+        console.log('Form submitted')
+        document.getElementById('form-button').setAttribute('hidden', "")
+        document.getElementById('payment-info').removeAttribute('hidden')
+    })
+</script>
