--- a/stuff/templates/stuff/checkout.html
+++ b/stuff/templates/stuff/checkout.html
@@ -67,7 +67,7 @@
                 <br>
                 <div class="box-element hidden" id="payment-info" hidden>
                     <small>Paypal Options</small>
-                    <!--<button id="make-payment">Make payment</button>-->
+                    <button id="make-payment">Make payment</button>
                     <div id="paypal-button-container"></div>
                 </div>
                 
@@ -77,7 +77,38 @@
 <!-- {% endblock checkout %} -->
 
 <script type="text/javascript">
+    var user = '{{request.user}}'
+    var total = '{{order.get_cart_total|floatformat:2}}'
     var shipping = '{{order.shipping}}'
+
+    function getCookie(name) {
+        let cookieValue = null;
+        if (document.cookie && document.cookie !== '') {
+            const cookies = document.cookie.split(';');
+            for (let i = 0; i < cookies.length; i++) {
+                const cookie = cookies[i].trim();
+                // Does this cookie string begin with the name we want?
+                if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                    break;
+                }
+            }
+        }
+        return cookieValue;
+    }
+    const csrftoken = getCookie('csrftoken');
+
+    if (user != 'AnonymousUser'){
+        document.getElementById('user-info').innerHTML = ''
+    }
+
+   if ( user != 'AnonymousUser'){
+       //Hide entire form if user is logged in and shipping is false
+           document.getElementById('form-wrapper').classList.add("hidden");
+           //Show payment if logged in user wants to buy an item that does not require shipping
+           document.getElementById('payment-info').classList.remove("hidden");
+   }
+
 
     var form = document.getElementById('form')
     form.addEventListener('submit', (e) => {
@@ -86,4 +117,58 @@
         document.getElementById('form-button').setAttribute('hidden', "")
         document.getElementById('payment-info').removeAttribute('hidden')
     })
+
+    document.getElementById('make-payment').addEventListener('click', (e) => {
+        submitFormData()
+    })
+
+    function submitFormData(){
+        console.log('Payment button clicked')
+
+        var userFormData = {
+            'name':null,
+            'email':null,
+            'total':total,
+        }
+
+        var shippingInfo = {
+            'address':null,
+            'city':null,
+            'state':null,
+            'zipcode':null,
+        }
+
+        if (shipping != 'False'){
+            shippingInfo.address = form.address.value
+            shippingInfo.city = form.city.value
+            shippingInfo.state = form.state.value
+            shippingInfo.zipcode = form.zipcode.value
+        }
+
+        if (user == 'AnonymousUser'){
+            userFormData.name = form.name.value
+            userFormData.email = form.email.value
+        }
+        var url = "/process_order/"
+	    	fetch(url, {
+	    		method:'POST',
+	    		headers:{
+	    			'Content-Type':'applicaiton/json',
+	    			'X-CSRFToken':csrftoken,
+	    		}, 
+	    		body:JSON.stringify({'form':userFormData, 'shipping':shippingInfo}),
+	    		
+	    	})
+	    	.then((response) => response.json())
+	    	.then((data) => {
+				console.log('Success:', data);
+				alert('Transaction completed');  
+
+				cart = {}
+				document.cookie ='cart=' + JSON.stringify(cart) + ";domain=;path=/"
+
+				window.location.href = "{% url 'stuff:stuff_list' %}"
+
+				})
+    }
 </script>
