--- a/stuff/templates/stuff/navbar.html
+++ b/stuff/templates/stuff/navbar.html
@@ -1,3 +1,4 @@
+
 {% block navbar %}
 {% load static %}
 <!DOCTYPE html>
@@ -20,24 +21,25 @@
                     <input class="form-control me-2" type="search" placeholder="Wyszukaj" aria-label="Search">
                     <button class="btn btn-outline-light" type="submit">🔎</button>
                   </form>
-                <a href="#" class="cart-link">🛒Koszyk</a>
-            {% if user.is_authenticated %}
-                <button type="button" class="btn btn-outline-light mx-1">
-                    <a href="{% url 'users:user-profile' user.profile.id %}" class="category_bar_element">Profil</a>
-                </button>
-                {% if user.is_superuser %}
-                <button type="button" class="btn btn-outline-light mx-1">
-                    <a href="{% url 'stuff:add_Book' %}" class="category_bar_element">Dodaj książkę</a>
-                </button>
-                {% endif %}
-            <button class="btn btn-outline-light mx-1">
-                <a href="{% url 'users:logout' %}" class="category_bar_element">Wyloguj</a>
-            </button>
-            {% else %}
-            <button class="btn btn-outline-light mx-1">
-                <a href="{% url 'users:login_Register' %}" class="category_bar_element">Zaloguj/Zarejestruj</a>
-            </button>
-            {% endif %}
+                  <a href="{% url 'stuff:cart' %}" class="cart-link">🛒Koszyk</a>
+                  <p>{{ cartitems }}</p>
+              {% if user.is_authenticated %}
+                  <button id="Button1">
+                      <a href="{% url 'users:user-profile' user.profile.id %}" class="category_bar_element">Profil</a>
+                  </button>
+                  {% if user.is_superuser %}
+                  <button id="Button1">
+                      <a href="{% url 'stuff:add_Book' %}" class="category_bar_element">Dodaj książkę</a>
+                  </button>
+                  {% endif %}
+              <button id="Button1">
+                  <a href="{% url 'users:logout' %}" class="category_bar_element">Wyloguj</a>
+              </button>
+              {% else %}
+              <button id="Button1">
+                  <a href="{% url 'users:login_Register' %}" class="category_bar_element">Zaloguj/Zarejestruj</a>
+              </button>
+              {% endif %}
             </div>
         </header>
     
@@ -58,6 +60,8 @@
             <a href="#">📞Kontakt</a>
         </nav>
 </body>
+
+
 
 </html>
 {% endblock %}
