--- a/templates/test2.html
+++ b/templates/test2.html
@@ -1,15 +1,11 @@
-{% load static %}
-<!DOCTYPE html>
-<html>
 
-<head>
-    <title>{% block title %}{% endblock %}</title>
+{% load static %}
+{% block content %}
     {% load bootstrap5 %}
     {% bootstrap_css %}
     {% bootstrap_javascript %}
-    <link rel="stylesheet" href="{% static 'styles\navbarstyle.css' %}">
+  
     <style>
-
         .book-container {
             width: 80%;
             margin: 20px auto;
@@ -74,56 +70,10 @@
             outline: 2px solid #491e66;
         }
     </style>
-</head>
 
 <body>
-    <body>
-        <header>
-            <h1 class="navbar-brand">HaHaHardcovers</h1>
-            <div class="header-buttons">
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Wyszukaj" aria-label="Search">
-                    <button class="btn btn-outline-light" type="submit">🔎</button>
-                  </form>
-                <a href="#" class="cart-link">🛒Koszyk</a>
-            {% if user.is_authenticated %}
-                <button type="button" class="btn btn-outline-light mx-1">
-                    <a href="{% url 'users:user-profile' user.profile.id %}" class="category_bar_element">Profil</a>
-                </button>
-                {% if user.is_superuser %}
-                <button type="button" class="btn btn-outline-light mx-1">
-                    <a href="{% url 'stuff:add_Book' %}" class="category_bar_element">Dodaj książkę</a>
-                </button>
-                {% endif %}
-            <button class="btn btn-outline-light mx-1">
-                <a href="{% url 'users:logout' %}" class="category_bar_element">Wyloguj</a>
-            </button>
-            {% else %}
-            <button class="btn btn-outline-light mx-1">
-                <a href="{% url 'users:login_Register' %}" class="category_bar_element">Zaloguj/Zarejestruj</a>
-            </button>
-            {% endif %}
-            </div>
-        </header>
-    
-        <nav>
-            <a href="#">🏠Strona Główna</a>
-                <a href="#" data-bs-toggle="dropdown">
-                    📚Kategorie
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                  </ul>
-            <a href="#">📖Książki</a>
-            <a href="#">💻Ebooki</a>
-            <a href="#">📢Bestsellery</a>
-            <a href="#">🏷️Promocje</a>
-            <a href="#">📞Kontakt</a>
-        </nav>
-
-
+    {% block navbar %}
+    {% endblock navbar %}
 
         <div class="book-container">
             <div class="book-image">
@@ -144,3 +94,4 @@
 </body>
 
 </html>
+{% endblock content %}
