--- a/stuff/templates/stuff/add_book.html
+++ b/stuff/templates/stuff/add_book.html
@@ -14,11 +14,12 @@
                 </div>
                 {% endfor %}
                
-                <div class="center-div">
+                <div>
+                    <button type="submit" id="Button1">Add Book</button>
+                    <button id="Button1">Cofnij na stronę główną</button>
                 </div>
             </form>
             
-            <button type="submit" id="Button1">Add Book</button>
 
 
 {% endblock addBook %}
