--- a/stuff/templates/stuff/update_book.html
+++ b/stuff/templates/stuff/update_book.html
@@ -14,7 +14,7 @@
                 </div>
                 {% endfor %}
                
-                <div class="center-div">
+                <div>
                 <button type="submit" id="Button1">Update Book</button>
                 </div>
             </form>
