--- a/templates/bookForm.html
+++ b/templates/bookForm.html
@@ -37,7 +37,7 @@
                 {% endfor %}
                
                 <div class="center-div">
-                <button type="submit" id="Button1">Add Book</button>
+                    <button type="submit" id="Button1">Update Book</button>
                 </div>
             </form>
         </div>
