--- a/templates/cart.html
+++ b/templates/cart.html
@@ -15,7 +15,7 @@
             <div class="col-md-8 cart">
                 <div class="title">
                     <div class="row">
-                        <div class="col"><h4><b>🛒Koszyk</b></h4></div>
+                        <div class="col"><h4><b>Koszyk</b></h4></div>
                         <div class="col align-self-center text-right text-muted">Ilość :</div>
                     </div>
                 </div>
