--- a/static/styles/test1style.css
+++ b/static/styles/test1style.css
@@ -7,10 +7,6 @@
     font-family: 'Montserrat', sans-serif;
 }
 
-.admin-container {
-    display: flex;
-    flex-wrap: wrap;
-}
 #Button1 {
     font-family: 'Montserrat', sans-serif;
     background: #9c86aa;
@@ -20,45 +16,10 @@
     transition: all 0.2s ease;
 }
 
-.admin-header {
-    background-color: #491e66;
-    color: #fff;
-    padding: 10px;
-    text-align: center;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.admin-logout {
-    text-decoration: none;
-    color: #fff;
-    padding: 8px 12px;
-    border-radius: 5px;
-    background-color: transparent;
-}
-
-.admin-sidebar {
-    background-color: #491e66;
-    padding: 10px;
-    width: 250px;
-    height: 100vh;
-}
 
 .admin-div {
     padding: 20px;
     flex: 1;
-}
-
-.admin-footer {
-    background-color: #491e66;
-    color: #fff;
-    text-align: center;
-    padding: 10px;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
 }
 
 .admin-add-book {
@@ -69,14 +30,39 @@
     text-align: center;
 }
 
-.center-div{
-        margin: 0;
-        position: absolute;
-        top: 50%;
-        left: 54%; 
+body{
+    background-color: #edddf8;
+    background: linear-gradient(to right, #ffffff, #491e66);
+    min-height: 100vh;
+    vertical-align: middle;
+    display: flex;
+    font-family: sans-serif;
+    font-size: 0.8rem;
+    font-weight: bold;
 }
-
-.category_bar_element{
-    text-decoration: none;
-    color: #fff;
+.card{
+    margin: auto;
+    max-width: 950px;
+    width: 90%;
+    border-radius: 1rem;
+    border: transparent;
+}
+.cart{
+    background-color: #fff;
+    padding: 4vh 5vh;
+    border-radius: 1rem;
+}
+input{
+    border: 1px solid rgba(0, 0, 0, 0.137);
+    padding: 1vh;
+    margin-bottom: 4vh;
+    outline: none;
+    width: 100%;
+    background-color: rgb(247, 247, 247);
+}
+ #code{
+    background-image: linear-gradient(to left, rgba(255, 255, 255, 0.253) , rgba(255, 255, 255, 0.185)), url("https://img.icons8.com/small/16/000000/long-arrow-right.png");
+    background-repeat: no-repeat;
+    background-position-x: 95%;
+    background-position-y: center;
 }
