--- a/stuff/templates/stuff/book_form.html
+++ b/stuff/templates/stuff/book_form.html
@@ -9,21 +9,12 @@
     <title>Admin Panel</title>
 </head>
 <body>
-    <div class="admin-container">
-        <header class="admin-header">
-            <h1>Admin Panel/Add Book</h1>
-            <Button id="Button1">Wyloguj</Button>
-        </header>
-        <aside class="admin-sidebar">
-            <nav>
-                <a href="#" class="category_bar_element">Edit Book</a>
-                <a href="#" class="category_bar_element">Delete Book</a>
-                <!--Wiecej opcji-->
-            </nav>
-        </aside>
-        <div class="admin-div">
-            <!-- Tu co w srodku-->
-            <h2 class="content-center">Dodaj nową książkę</h2>
+    <div class="card">
+        <div class="row">
+            <div class="col-md-8 cart"> 
+                <div class="row border-top border-bottom">
+                    <div class="row main align-items-center">
+                        <h2 class="content-center">Dodaj nową książkę</h2>
 
             {% block updateBook %}
 
@@ -32,10 +23,10 @@
             {% block addBook %}
 
             {% endblock addBook %}
+                    </div>
+                </div>
+            </div>
         </div>
-        <footer class="admin-footer">
-            &copy; 2024 HaHaHardcovers
-        </footer>
     </div>
 </body>
 </html>
