--- a/stuff/templates/stuff/update_book.html
+++ b/stuff/templates/stuff/update_book.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block updateBook %}
 
-            <form method="POST">
+            <form method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
 
                 {% for field in form %}
@@ -15,7 +15,9 @@
                 {% endfor %}
                
                 <div>
-                <button type="submit" id="Button1">Update Book</button>
+                    <button type="submit" id="Button1">Update Book</button>
+                    <button id="Button1"><a href="{% url 'stuff:delete-book' pk=book.id %}">Delete Book</a></button>
+                
                 </div>
             </form>
 
