--- a/stuff/templates/stuff/books_detail.html
+++ b/stuff/templates/stuff/books_detail.html
@@ -27,8 +27,7 @@
                 </div>
                 <div class="book-price">Cena: {{object.price}} zł</div>
 
-                <button data-book="{{book.id}}" data-action="add" class="addItem buy-now-btn">Dodaj do koszyka</button>
-
+                <button data-book="{{object.id}}" data-action="add" class="addItem buy-now-btn">Dodaj do koszyka</button>
             </div>
             
 
