--- a/templates/bookForm.html
+++ b/templates/bookForm.html
@@ -11,13 +11,13 @@
 <body>
     <div class="admin-container">
         <header class="admin-header">
-            <h1>Admin Panel/Add Book</h1>
+            <h1>Dodaj książkę</h1>
             <Button id="Button1">Wyloguj</Button>
         </header>
         <aside class="admin-sidebar">
             <nav>
-                <a href="#" class="category_bar_element">Edit Book</a>
-                <a href="#" class="category_bar_element">Delete Book</a>
+                <a href="#" class="category_bar_element">Edytuj książkę</a>
+                <a href="#" class="category_bar_element">Usuń książkę</a>
                 <!--Wiecej opcji-->
             </nav>
         </aside>
@@ -37,7 +37,7 @@
                 {% endfor %}
                
                 <div class="center-div">
-                    <button type="submit" id="Button1">Update Book</button>
+                    <button type="submit" id="Button1">Aktualizuj dane książki</button>
                 </div>
             </form>
         </div>
