--- a/templates/delete_template.html
+++ b/templates/delete_template.html
@@ -8,10 +8,10 @@
 
                 <form class="form" method="POST" action="">
                     {% csrf_token %}
-                    <p>Are you sure you want to delete '{{object}}'</p>
+                    <p>Jesteś pewny że chcesz usunąć '{{object}}'?</p>
                     
 
-                    <input class="btn btn--sub btn--lg  my-md" type="submit" value="Confirm" />
+                    <input class="btn btn--sub btn--lg  my-md" type="submit" value="Potwierdź" />
                 </form>
             </div>
         </div>
