--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -37,14 +37,14 @@
               </svg></a>
             <br>
 
-            <h3>Forgotten your password?</h3>
-            <p>Enter your email addres below, and we'll email instructions for setting a new one.</p>
+            <h3>Zapomniałeś hasła?</h3>
+            <p>Podaj poniżej swój adres e-mail, a wyślemy instrukcje dotyczące ustawienia nowego.</p>
             <form class="form" method="POST">
                 {% csrf_token %}
             
                 <p style="border: 2px solid black;" >{{form}}</p>
 
-                <button type="submit" id="Button1">Submit</button>
+                <button type="submit" id="Button1">Prześlij</button>
             </form>
         </div>
     </div>
