--- a/templates/reset_password_sent.html
+++ b/templates/reset_password_sent.html
@@ -13,12 +13,12 @@
         <h3>Password reset sent</h3></div></div>
         <br>
         <p>
-            We’ve emailed you instructions for setting your password, if an account exists with the email you entered. You should receive them shortly.
+            Wysłaliśmy Ci e-mail z instrukcjami dotyczącymi ustawienia hasła, jeśli istnieje konto powiązane z podanym adresem e-mail. Powinieneś je otrzymać wkrótce.
         </p>
             
             
         <p>
-            If you don’t receive an email, please make sure you’ve entered the address you registered with, and check your spam folder.
+            Jeśli nie otrzymasz e-maila, upewnij się, że podałeś właściwy adres, z którym się zarejestrowałeś, i sprawdź folder ze spamem.
         </p>
             
         </div>
