--- a/stuff/templates/stuff/checkout.html
+++ b/stuff/templates/stuff/checkout.html
@@ -31,7 +31,7 @@
                     <form id="form">
                             <div id="user-info">
                                 <div class="form-field">
-                                    <input required class="form-control" type="text" name="name" placeholder="Name..">
+                                    <input required class="form-control" type="text" name="name" placeholder="Imię..">
                                 </div>
                                 <div class="form-field">
                                     <input required class="form-control" type="email" name="email" placeholder="Email..">
@@ -43,19 +43,19 @@
                                 <p>Shipping Information:</p>
                                 <hr>
                                 <div class="form-field">
-                                    <input class="form-control" type="text" name="address" placeholder="Address..">
+                                    <input class="form-control" type="text" name="address" placeholder="Adres..">
                                 </div>
                                 <div class="form-field">
-                                    <input class="form-control" type="text" name="country" placeholder="Country..">
+                                    <input class="form-control" type="text" name="country" placeholder="Kraj..">
                                 </div>
                                 <div class="form-field">
-                                    <input class="form-control" type="text" name="city" placeholder="City..">
+                                    <input class="form-control" type="text" name="city" placeholder="Miasto..">
                                 </div>
                                 <div class="form-field">
-                                    <input class="form-control" type="text" name="state" placeholder="State..">
+                                    <input class="form-control" type="text" name="state" placeholder="Województwo..">
                                 </div>
                                 <div class="form-field">
-                                    <input class="form-control" type="text" name="zipcode" placeholder="Zip code..">
+                                    <input class="form-control" type="text" name="zipcode" placeholder="Kod pocztowy..">
                                 </div>
                             </div>
                         </div>
