--- a/stuff/templates/stuff/stuff_list.html
+++ b/stuff/templates/stuff/stuff_list.html
@@ -3,7 +3,6 @@
 {% block stuff %}
 <link rel="stylesheet" href="{% static 'styles\StuffListStyle.css' %}">
 <div class="container">
-  <h1>Popularne:</h1>
 
   <ul id="popular-book-list" class="box-grid">
     {% for book in books %}
@@ -14,12 +13,12 @@
         <img src="{% static 'images/blank.png' %}" alt="">
       {% endif %}
       <a class="read-more-button" href="{% url 'stuff:book_detail' pk=book.id%}">
-        {{book.title}}
+        {{book.title|slice:":20"}}
       </a>
       Autor: {{book.author}}<br/>
       Cena: {{book.price|floatformat:2}} zł<br/>
       {% if user.is_superuser %}
-        <a href="{% url 'stuff:update-book' pk=book.id %}" class="updateButton">Update</a>
+        <a href="{% url 'stuff:update-book' pk=book.id %}" class="updateButton">Edytuj</a>
       {% endif %}
       <button data-book="{{book.id}}" data-action="add" class="addItem">Dodaj do koszyka</button>
     </li>
