--- a/templates/cart.html
+++ b/templates/cart.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'styles\cartstyle.css' %}">
     
-    <title>Document</title>
+    <title>Koszyk</title>
 </head>
 <body>
     <div class="card">
