--- a/templates/pagination.html
+++ b/templates/pagination.html
@@ -1,11 +1,11 @@
 {% load static %}
 {% if queryset.has_other_pages%}
 <link rel="stylesheet" href="{% static 'styles\pagination.css' %}">
-    <div class="pagination">
+    <div class="pagination fixed-bottom">
       <ul class="container">
 
         {% if queryset.has_previous %}
-          <li><a href="?page={{queryset.previous_page_number}}" class="btn page-link" data-page="{{queryset.previous_page_number}}">&#10094; Prev</a></li>
+          <li><a href="?page={{queryset.previous_page_number}}" class="btn page-link" data-page="{{queryset.previous_page_number}}">&#10094;</a></li>
         {% endif %}
         
         {% for page in custom_range %}
@@ -21,7 +21,7 @@
         {% endfor %}
 
         {% if queryset.has_next %}
-          <li><a href="?page={{queryset.next_page_number}}" class="btn page-link" data-page="{{queryset.next_page_number}}">Next &#10095;</a></li>
+          <li><a href="?page={{queryset.next_page_number}}" class="btn page-link" data-page="{{queryset.next_page_number}}">&#10095;</a></li>
         {% endif %}
       </ul>
     </div>
