--- a/templates/reset.html
+++ b/templates/reset.html
@@ -32,14 +32,14 @@
     <div class="content-box">
         <div class="formWrapper">
 
-            <h3>Enter new password.</h3><br>
-            <p>Please enter your new password twice so we can verify you typed it in correctly.</p>
+            <h3>Wprowadź nowe hasło</h3><br>
+            <p>Proszę wprowadź nowe hasło dwukrotnie, abyśmy mogli zweryfikować, czy wpisałeś je poprawnie.</p>
             <form class="form" method="POST">
                 {% csrf_token %}
             
                 <p>{{form}}</p> <br>
 
-                <input class="btn btn--sub btn--lg  my-md" type="submit" value="Submit" />
+                <input class="btn btn--sub btn--lg  my-md" type="submit" value="Prześlij" />
             </form>
         </div>
     </div>
