--- a/templates/reset_password_complete.html
+++ b/templates/reset_password_complete.html
@@ -8,8 +8,8 @@
     <div class="content-box">
         <div class="formWrapper">
 
-            <h3>Password reset complete</h3>
-            <p>You password has been set. You may go ahead and log in now.</p>
+            <h3>Hasło został zresetowane</h3>
+            <p>Twoje hasło zostało zmienione. Możesz teraz przejść do logowania.</p>
             <br>
             <div>
                 <a id="Button1" style="text-decoration: none; color:aliceblue;" href="{% url 'users:login_Register' %}">LogIn</a>
