--- a/static/styles/navbarstyle.css
+++ b/static/styles/navbarstyle.css
@@ -108,3 +108,19 @@ nav a {
 .btn-primary:hover {
     color: #2ecc71;
   }
+  .circle {
+    background:#9c86aa;
+    color: #fff;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 14px;
+    margin-right: 10px;
+    margin-left: -10px;
+    margin-top: -20px;
+  }
+  
+  
